--- a/restaurant_app/pubspec.yaml
+++ b/restaurant_app/pubspec.yaml
@@ -5,7 +5,7 @@ description: dicoding submission 1
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.0 <3.0.0'
+  sdk: '>=3.0.6 <=4.0.0'
 
 dependencies:
   flutter:
@@ -23,6 +23,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   lottie: ^2.2.0
   dio: ^4.0.6
+  flutter_local_notifications: ^15.1.0+1
 
 dev_dependencies:
   flutter_test:
