--- a/restaurant_app/pubspec.yaml
+++ b/restaurant_app/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   lottie: ^2.2.0
   dio: ^4.0.6
+  connectivity_plus: ^4.0.2
   flutter_local_notifications: ^15.1.0+1
 
 dev_dependencies:
